Icon alignment in sidebar + Postgres schema field bug fix

--- a/jupyterlab-amphi/packages/pipeline-editor/style/canvas.css
+++ b/jupyterlab-amphi/packages/pipeline-editor/style/canvas.css
@@ -131,38 +131,38 @@ Editor components styles
 Components palette sidebar
 */
 
-.palette {
+.canvas {
   @apply flex flex-col flex-grow h-full;
 }
 
-.palette aside {
+.sidebar {
   @apply border-r border-l border-[#eee] border-l-[#E0E0E0] text-[12px] bg-white;
 }
 
 
-.palette aside .description {
+.sidebar .description {
   @apply mr-[8px] mb-[10px] mt-[10px];
 }
 
-.palette .draggable_component {
+.sidebar .draggable_component {
   @apply h-[30px] p-[4px] bg-[#F2F4F7] border border-[var(--jp-border-color2)] mb-[10px] flex items-center justify-start cursor-grab leading-[16px] rounded-[3px];
 }
 
-.palette .reactflow-wrapper {
+.canvas .reactflow-wrapper {
   @apply flex-grow h-full;
 }
 
-.palette .selectall {
+.canvas .selectall {
   @apply mt-[10px];
 }
 
 @media screen and (min-width: 768px) {
-  .palette {
+  .canvas {
     @apply flex flex-row;
     /* Sets the flex direction to row */
   }
 
-  .palette aside {
+  .sidebar {
     @apply fixed top-0 right-0 h-full w-[220px] z-10;
     overflow-x: hidden;
     overflow-y: auto;
@@ -187,11 +187,11 @@ Components palette sidebar
   /* Ensure categories are on top but below components */
 }
 
-.palette .palette-component-category {
+.sidebar .palette-component-category {
   font-weight: bold;
 }
 
-.palette .ant-tree-indent-unit {
+.sidebar .ant-tree-indent-unit {
   width: 8px;
 }
 
