--- a/jupyterlab-amphi/packages/pipeline-editor/style/output.css
+++ b/jupyterlab-amphi/packages/pipeline-editor/style/output.css
@@ -1056,14 +1056,14 @@ Editor components styles
 Components palette sidebar
 */
 
-.palette {
+.canvas {
   display: flex;
   height: 100%;
   flex-grow: 1;
   flex-direction: column;
 }
 
-.palette aside {
+.sidebar {
   border-right-width: 1px;
   border-left-width: 1px;
   border-color: rgb(238 238 238 / var(--tw-border-opacity));
@@ -1074,13 +1074,13 @@ Components palette sidebar
   font-size: 12px;
 }
 
-.palette aside .description {
+.sidebar .description {
   margin-right: 8px;
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-.palette .draggable_component {
+.sidebar .draggable_component {
   margin-bottom: 10px;
   display: flex;
   height: 30px;
@@ -1096,23 +1096,23 @@ Components palette sidebar
   line-height: 16px;
 }
 
-.palette .reactflow-wrapper {
+.canvas .reactflow-wrapper {
   height: 100%;
   flex-grow: 1;
 }
 
-.palette .selectall {
+.canvas .selectall {
   margin-top: 10px;
 }
 
 @media screen and (min-width: 768px) {
-  .palette {
+  .canvas {
     display: flex;
     flex-direction: row;
     /* Sets the flex direction to row */
   }
 
-  .palette aside {
+  .sidebar {
     position: fixed;
     top: 0px;
     right: 0px;
@@ -1140,11 +1140,11 @@ Components palette sidebar
   /* Ensure categories are on top but below components */
 }
 
-.palette .palette-component-category {
+.sidebar .palette-component-category {
   font-weight: bold;
 }
 
-.palette .ant-tree-indent-unit {
+.sidebar .ant-tree-indent-unit {
   width: 8px;
 }
 
